--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "@testing-library/jest-dom": "^5.16.1",
         "@testing-library/react": "^12.1.2",
         "@testing-library/user-event": "^13.5.0",
+        "axios": "^0.26.1",
         "bootstrap": "^5.1.0",
         "lodash": "^4.17.15",
         "prop-types": "^15.7.2",
@@ -14,6 +15,7 @@
         "react-router-dom": "^5.3.0",
         "react-scripts": "5.0.0",
         "react-select": "^5.2.2",
+        "react-toastify": "^8.2.0",
         "web-vitals": "^2.1.2"
     },
     "scripts": {
