--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "axios": "^0.26.1",
         "bootstrap": "^5.1.0",
         "lodash": "^4.17.15",
+        "nanoid": "^3.3.2",
         "prop-types": "^15.7.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
